# jornada-dados-trilha-python

./: .gitignore
Aula_01/: desafio.py
Aula_02/: desafio.py
Aula_02/exercicios/booleanos/: exercicio_16.py  exercicio_17.py  exercicio_18.py  exercicio_19.py  exercicio_20.py
Aula_02/exercicios/float/: exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py
Aula_02/exercicios/int/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py
Aula_02/exercicios/str/: exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py
Aula_02/exercicios/try_except_e_if/: exercicio_21.py  exercicio_22.py  exercicio_23.py  exercicio_24.py  exercicio_25.py
Aula_03/exercicios/: desafio.py
Aula_03/exercicios/for/: exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py
Aula_03/exercicios/if_else/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py
Aula_03/exercicios/while/: exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py
Aula_04/: arquivos.py  desafio.py
Aula_04/exercicios/01_type_hint/: exercicio.py
Aula_04/exercicios/02_listas_e_dicionarios/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py  exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py
Aula_04/exercicios/04_funcoes/: exercicio_16.py  exercicio_17.py  exercicio_18.py  exercicio_19.py  exercicio_20.py
Aula_05/src/: using_polars.py
Aula_05_/: .gitignore  pyproject.toml
Aula_05_/src/: using_python.py
Aula_06/: main.py
Aula_07/: desafio.py  utils.py
Aula_07/exercicio/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py
Aula_08/: etl.py  pipeline.py  pyproject.toml
Aula_08/data/processed/: dados.csv  dados.parquet
Aula_09/: etl.py  pyproject.toml
Aula_11/: pyproject.toml
Aula_11/01-basico/: class_.py  functional.py
Aula_11/01-basico/data/: exemplo.csv
Aula_11/02-encapsulamento/: conexao.py
Aula_12/: csv_test.py  pyproject.toml
Aula_12/data/: exemplo.csv
Aula_12/src/: use_class.py
Aula_12/src/interface/classes/: csv_class.py
Aula_13_14/: csv_02.csv  pyproject.toml
Aula_13_14/data/csv_files/: csv_01.csv
Aula_13_14/data/json_files/: json_01.json
Aula_13_14/data/txt_files/: txt_01.txt
Aula_13_14/src/: main.py
Aula_15/: pyproject.toml
Aula_16/: main.py  pyproject.toml
Aula_17/: desafio.py  desafio_query.py  exemplo_01.py  pyproject.toml
Aula_18/: exemplo_01.py  pyproject.toml
Aula_18/src/: controller.py  main.py  models.py  schema.py
Aula_19/: pyproject.toml
Aula_19/src/: main.py
Aula_20/: docker-compose.yaml  pyproject.toml
Aula_20/backend/: Dockerfile  crud.py  database.py  main.py  models.py  requirements.txt  router.py  schemas.py
aula_05/src/: get_file.py  using_dask.py  using_duckdb.py  using_pandas.py  using_python.py  using_python_old.py
aula_06/: pyproject.toml
