[project]
name = "one-billion-row-challenge-python"
version = "0.1.0"
description = "One-Billion-Row-Challenge-Python - Bootcamp Python"
authors = [
    {name = "Thiago Souza",email = "thiagolsmail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry.dependencies]
python = "3.12.1"
polars = "0.20.3"
duckdb = "0.10.0"
modin = {extras = ["dask"], version = "^0.27.0"}
dask = {extras = ["complete"], version = "^2024.2.0"}
dask-expr = "^0.4.2"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
