[project]
name = "jornada-de-dados-aula-20"
version = "0.1.0"
description = "Jornada de Dados - Aula 20"
authors = [
    {name = "Thiago Souza",email = "thiagolsmail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
